@@ -179,6 +179,7 @@ TESTS =	t1000-statfuns.pl			\
 	t9004-ssdiff-highlight.pl		\
 	t9005-ssconvert-merge.pl		\
 	t9006-ssconvert-split.pl		\
+	t9007-ssconvert-sheet.pl		\
 	t9010-ssgrep.pl				\
 	t9100-number-match.pl			\
 	t9999-epilogue.pl
